--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
     "material-ui": "next",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
